--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
     "minimum-stability": "stable",
     "require": {
 	    "symfony/symfony": ">= 2.1.0",
-	    "zendframework/zend-http": "2.1.*"
+	    "zendframework/zend-http": ">=2.1"
     }
 }
